created markup header

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,9 @@
 $default-font: "Arial";
 
-$darkRed: #B21212;
-$yellow: #FFFC19;
-$lightRed: #FF0000;
-$lightBlue: #1485CC;
-$darkBlue: #0971B2;
+$grey: #555555;
+$white: #FFFFFF;
+// $darkRed: #B21212;
+// $yellow: #FFFC19;
+// $lightRed: #FF0000;
+$lightBlue: #5363db;
+// $darkBlue: #0971B2;
