--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -2,8 +2,6 @@
 @import "../mixins";
 @import "../fonts";
 @import "../base";
-// Your styles should be here
 
-.red {
-	background-color: red;
-}
+// Pages
+@import "./header";
