--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -5,36 +5,32 @@
   &::after {
     box-sizing: border-box;
   }
-
-  &::-webkit-input-placeholder,
-  &:-moz-placeholder,
-  &::-moz-placeholder,
-  &:-ms-input-placeholder {
-    color: #ccc;
-  }
 }
 
 html {
   width: 100%;
-  height: 100%;
+	height: 100%;
+	
+	-webkit-overflow-scrolling: touch;
+	-webkit-text-size-adjust: none;
+  
+  font-size: 50%; // 8px 
 
-  font-size: 62.5%; // 10px
+	@media screen and (min-width: 480px) {
+    font-size: 56.25%; // 9px
+	}
 
-  //@media screen and (width <= 992px) {
-  //  font-size: 56.25%; // 9px
-  //}
-  //
-  //@media screen and (width <= 768px) {
-  //  font-size: 50%; // 8px
-  //}
-  //
-  //@media screen and (width <= 480px) {
-  //  font-size: 43.75%; // 7px
-  //}
-  //
-  //@media screen and (width <= 320px) {
-  //  font-size: 37.5%; // 6px
-  //}
+	@media screen and (min-width: 768px) {
+    font-size: 56.25%; // 9px
+	}
+
+	@media screen and (min-width: 992px) {		
+    font-size: 62.5%; // 10px
+	}
+
+	@media screen and (min-width: 1200px) {
+    font-size: 62.5%; // 10px
+	}
 }
 
 body {
@@ -44,7 +40,9 @@ body {
   min-width: 320px;
   height: 100%;
   margin: 0;
-  padding: 0;
+	padding: 0;
+	
+	background-color: $white;
 
   font-family: $default-font;
   line-height: 1.5;
@@ -57,21 +55,50 @@ body {
   }
 }
 
-.visually-hidden {
-  position: absolute;
-
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-
-  border: 0;
-}
-
 img {
   width: 100%;
   height: auto;
 }
+
+.container {
+	width: 1170px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+a {
+	text-decoration: none;
+	-webkit-tap-highlight-color: transparent;
+
+	&:hover {
+		text-decoration: none;
+		-webkit-tap-highlight-color: transparent;
+	}
+} 
+
+p, h1, h2, h3, h4, h5, h6 {
+	padding: 0;
+	margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	text-transform: uppercase;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.input {
+	-webkit-appearance: none;
+}
+
+// .btn {
+// 	font-size: 1.3rem;
+// 	text-transform: uppercase;
+// 	padding: 15px 100px; 
+// 	border-radius: 3px;
+// 	transition: all .5s ease;
+// }
