--- a/src/scss/pages/header.scss
+++ b/src/scss/pages/header.scss
@@ -2,21 +2,81 @@
 
 .header {
 	height: 100px;
-}
+	padding-top: 10px;
+} 
 
 .container--header {
-	padding: 0 140px;
+	padding: 10px 15px 0;  	
+	
+	@media screen and (min-width: 992px) {		
+		padding: 0 140px;
+	}
 }
 
-.navigation {
-	display: flex;
+.header-mobile {
+	display: flex; 
 	justify-content: space-between;
-	align-items: center;
-	padding: 10px 0;
+
+	@media screen and (min-width: 992px) {		
+    display: none;
+	}
+}
+
+.nav {
+	position: fixed;
+	background-color: rgba($white, .8);
+	top: 0;
+	right: -100%;  
+	width: 0%;
+	height: 100%;  
+
+	display: flex;
+	flex-direction: column; 
+	justify-content: flex-start; 
+	align-items: flex-end; 
+	padding: 150px 20px 0 0px;
+	text-align: right;
+	transition: all .5s ease;  
+	 
+	@media screen and (min-width: 992px) {
+		position: relative;
+		background-color: rgba($white, .8);
+		top: 0; 
+		right: 0;
+		width: 100%;
+		height: 100%;
+
+		display: flex;
+		flex-direction: row; 
+		justify-content: space-between;
+		align-items: center;
+		padding: 10px 0;
+	} 
+
+	&--active {
+		width: 50%;  
+		right: 0;
+		display: flex;
+		transition: all .5s ease;  
+	}
 	
 	&__list {
 		display: flex;
-		justify-content: space-between;
+		flex-direction: column; 
+		justify-content: flex-start;
+		
+		@media screen and (min-width: 992px) {
+			justify-content: space-between;
+			flex-direction: row; 
+		} 
+
+		&--left {
+			order: 1;
+		}
+
+		&--right { 
+			order: 3;
+		}
 	}
 }
 
@@ -29,27 +89,61 @@
 		color: $lightBlue;
 		font-family: Open Sans regular, sans-serif;
 	}
+
+	&--mobile { 
+		display: block;
+		width: 80px;
+		height: 80px;
+		
+		@media screen and (min-width: 992px) {
+			display: none; 
+		}
+	}
+
+	&--nav { 
+		display: none; 
+		text-align: center;
+		
+		@media screen and (min-width: 992px) {
+			display: flex; 
+			order: 2; 
+		}
+	}
 }
 
-.menu-item {
-	margin-right: 30px;
+.menu-item { 
+	margin-right: 0px;
+	margin-bottom: 15px;
+	
+	@media screen and (min-width: 992px) {
+		margin-right: 30px;
+		margin-bottom: 0px; 
+	}
 	
 	&__link {
 		font-family: Open Sans semiBold, sans-serif;
 		font-weight: 700;
-		font-size: 1.4rem;
-		color: $grey;
+		font-size: 3rem;
+		color: $grey; 
 		transition: all .5s linear;
+		
+		@media screen and (min-width: 992px) {
+			font-size: 1.4rem;
+		}
 
 		&::after {  
-			content: "";
-			display: block;
-			width: 0; 
-			height: 1px;
-			background: $grey;
-			margin: auto;
-			transition: width .3s linear;
-		}
+			display: none;
+		
+			@media screen and (min-width: 992px) {
+				content: "";
+				display: block;
+				width: 0; 
+				height: 1px;
+				background: $grey;
+				margin: auto;
+				transition: width .3s linear;
+			}
+		} 
 		
 	
 		&:hover {
@@ -65,14 +159,18 @@
 		&--active {
 			color: $lightBlue; 	
 
-			&::after {  
-				content: "";
-				display: block;
-				width: 70%; 
-				height: 1px;
-				background: $lightBlue;
-				margin: auto;
-				transition: width .3s linear;
+			&::after {   
+				display: none;
+		
+				@media screen and (min-width: 992px) {
+					content: "";
+					display: block;
+					width: 70%; 
+					height: 1px;
+					background: $lightBlue;
+					margin: auto;
+					transition: width .3s linear;
+				}
 			}			
 		}
 	}
@@ -80,4 +178,20 @@
 	&:last-child {
 		margin-right: 0;
 	}
+}
+
+.hamburger {
+	z-index: 1;
+
+	&--color, &--color::after, &--color::before { 
+		background-color: $lightBlue;
+	}
+
+	&:focus {
+		outline: none; 
+	}
+} 
+
+.hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner::before, .hamburger.is-active .hamburger-inner::after {
+	background-color: $lightBlue;	
 }
