--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-	font-family: 'Open Sans regular';
+	font-family: 'Open Sans';
 	font-display: auto;
   src: url('../assets/fonts/Open_Sans/OpenSans-Regular.ttf') format("truetype");
   font-style: normal;
