--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,10 @@
-$default-font: "Arial";
-
-$grey: #555555;
+$default-font: Open Sans;
+ 
+$lightGrey: #F2F2F2;
+$grey: #888888;
+$darkGrey: #555555;
 $white: #FFFFFF;
+$black: #000000;
 // $darkRed: #B21212;
 // $yellow: #FFFC19;
 // $lightRed: #FF0000;
