--- a/src/scss/pages/header.scss
+++ b/src/scss/pages/header.scss
@@ -2,7 +2,6 @@
 
 .header {
 	height: 100px;
-	padding-top: 10px;
 } 
 
 .container--header {
@@ -48,6 +47,7 @@
 		
 		@media screen and (min-width: 992px) {
 			display: flex; 
+			flex-direction: column;
 			order: 2; 
 		}
 	}
@@ -57,11 +57,12 @@
 
 .nav {
 	position: fixed;
-	background-color: rgba($white, .8);
+	background-color: rgba($white, .95);
 	top: 0;
 	right: -100%;  
 	width: 0%;
 	height: 100%;  
+	z-index: 99;
 
 	display: flex;
 	flex-direction: column; 
@@ -185,7 +186,7 @@
 // hamburger-menu
 
 .hamburger {
-	z-index: 1;
+	z-index: 999;
 
 	&--color, &--color::after, &--color::before { 
 		background-color: $lightBlue;
