--- a/src/scss/pages/feedback.scss
+++ b/src/scss/pages/feedback.scss
@@ -1,13 +1,15 @@
 @import '../vars';
 
 .feedback {
-	background: url(../img/background/cover.jpg) 20% 50% no-repeat;
+	background: url(../img/background/cover.jpg) 25% 50% no-repeat;
 	position: relative;
   background-size: cover;
   min-height: 80%;
   width: 100%;
   z-index: 1;
 	-webkit-appearance: none;
+
+	margin-bottom: 70px;
 
   &::before {
     content: ""; 
@@ -52,6 +54,7 @@
 	padding: 30px;
 	margin: 30px 0;
 	z-index: 50;
+	box-shadow: 5px 5px 3px 0 rgba($black, .15 );  
 	
 	@media screen and (min-width: 992px) {
 		margin: 100px 0;
