--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -1,5 +1,9 @@
 @import '../vars';
 
+.gallery {
+	margin-bottom: 100px;
+}
+
 .grid {
 	width: 100%;
 	display: flex;
@@ -8,9 +12,21 @@
 
 	&__item {
 		position: relative;
-		width: 25%;
+		width: 100%;
 		cursor: pointer;
 		-webkit-appearance: none;
+		
+		@media screen and (min-width: 480px) {
+			width: 50%;
+		}
+		
+		@media screen and (min-width: 992px) {		
+			width: 33%;
+		}
+		
+		@media screen and (min-width: 1200px) {		
+			width: 25%;
+		}
 		
 		&:hover {
 			&::before {
@@ -51,11 +67,29 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 70%;
-	top: 30px;
-	bottom: 30px;
+	width: 100%;
+	top: 30%;
+	bottom: 30%;
 	z-index: 22; 
 	cursor: default;
+
+	@media screen and (min-width: 480px) {
+		width: 90%;
+		top: 30%;
+		bottom: 30%;
+	}
+
+	@media screen and (min-width: 768px) {
+		width: 90%;
+		top: 50px;
+		bottom: 50px;
+	}
+		
+	@media screen and (min-width: 992px) {		
+		width: 70%;
+		top: 30px;
+		bottom: 30px;
+	}
 
 	&:hover {
 		&::before {
