created treatment block

--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -1,9 +1,9 @@
 @import '../vars';
 
 .about {
-	position: absolute;
+	position: relative;
 	padding: 0 40px;
-	margin-bottom: 100px;
+	margin-bottom: 70px;
 	
 	@media screen and (min-width: 1200px) {
 		padding: 0 30px;
@@ -63,6 +63,7 @@
 
 .about-img-block {
 	position: relative;
+	height: 300px;
 
 	&__img {
 		box-shadow: 0 0 10px 5px rgba($black, .1 );  
