created footer block

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,8 +5,5 @@ $grey: #888888;
 $darkGrey: #555555;
 $white: #FFFFFF;
 $black: #000000;
-// $darkRed: #B21212;
-// $yellow: #FFFC19;
-// $lightRed: #FF0000;
+$blue: #5b6ceb;
 $lightBlue: #5363db;
-// $darkBlue: #0971B2;
