--- a/src/scss/pages/footer.scss
+++ b/src/scss/pages/footer.scss
@@ -21,6 +21,12 @@
 .container--footer {
 	display: flex;
 	justify-content: space-between;
+	flex-direction: column;
+	margin: 0 20px;
+	
+	@media screen and (min-width: 992px) {		
+		flex-direction: row;
+	}
 }
 
 .footer{
@@ -35,11 +41,19 @@
 	&-about {
 		display: flex;
 		flex-direction: column;
-		align-items: flex-start;
-		text-align-last: left;
-		padding-right: 100px;
-		width: 50%;
-
+		align-items: center;
+		justify-content: center;
+		padding-right: 0px;
+		padding-bottom: 30px;
+		width: 100%;
+		
+		@media screen and (min-width: 992px) {		
+			padding-bottom: 0px;
+			padding-right: 100px;
+			width: 50%;
+			align-items: flex-start;
+		}
+		
 		&__desc {
 			font-size: 1.4rem;
 			margin-bottom: 50px;
@@ -73,7 +87,16 @@
 }
 
 .footer-contact {
-	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center; 
+	width: 100%;
+	
+	@media screen and (min-width: 992px) {
+		display: block;
+		width: 50%;
+	}
 }
 
 .footer-contact__contacts {
@@ -82,9 +105,19 @@
 }
 
 .contact-item {
-	width: 50%;
-	padding-left: 30px;
-	margin-bottom: 20px;
+	width: 100%; 
+	padding-left: 0px;
+	margin-bottom: 20px; 
+	text-align: center;
+	
+	@media screen and (min-width: 768px) {
+		text-align: left;
+		width: 50%; 
+	}
+	
+	@media screen and (min-width: 992px) {
+		padding-left: 30px;
+	}
 	
 	&__desc {
 		position: relative; 
