--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -5,6 +5,10 @@
 	padding: 0 40px;
 	margin-bottom: 70px;
 	
+	border-top: 120px solid transparent;
+	margin-top: -100px;
+	background-clip: padding-box;
+	
 	@media screen and (min-width: 1200px) {
 		padding: 0 30px;
 	}
