--- a/src/scss/pages/header.scss
+++ b/src/scss/pages/header.scss
@@ -1,12 +1,17 @@
 @import "../vars";
 
 .header {
+	position: sticky;
+	top: 0;
 	height: 100px;
+	width: 100vw;
+	z-index: 1000;
+	background-color: $white; 
 } 
 
 .container--header {
 	padding: 10px 15px 0;  	
-	
+
 	@media screen and (min-width: 992px) {		
 		padding: 0 140px;
 	}
@@ -64,6 +69,7 @@
 	height: 100%;  
 	z-index: 99;
 
+
 	display: flex;
 	flex-direction: column; 
 	justify-content: flex-start; 
@@ -88,7 +94,7 @@
 	} 
 
 	&--active {
-		width: 50%;  
+		width: 60%;  
 		right: 0;
 		display: flex;
 		transition: all .5s ease;  
