--- a/src/scss/pages/feedback.scss
+++ b/src/scss/pages/feedback.scss
@@ -30,17 +30,23 @@
 
 .container--feedback {
 	display: flex;
+	display: -ms-flex;
 	flex-direction: column; 
+	-ms-flex-direction: column; 
 	justify-content: center; 
+	-ms-justify-content: center; 
 	align-self: center;
 	
 	@media screen and (min-width: 992px) {
 		justify-content: space-around; 
+		-ms-justify-content: space-around; 
 		flex-direction: row;
+		-ms-flex-direction: row;
 	} 
 	
 	@media screen and (min-width: 1200px) {
 		justify-content: center;
+		-ms-justify-content: center;
 	} 
 }
 
@@ -49,8 +55,12 @@
 .feedback-form {
 	align-self: center;
 	display: flex;
+	display: -ms-flex;
 	flex-direction: column;
+	-ms-flex-direction: column;
 	align-items: flex-start;
+	-ms-align-items: flex-start;
+
 	order: 2;
 	max-width: 305px;
 	height: 400px; 
@@ -109,15 +119,20 @@
 
 .btn--feedback-form {
 	align-self: flex-end;
+	-ms-align-self: flex-end;
 }
 
 // feedback-desc
 
 .feedback-desc {
 	display: flex;
+	display: -ms-flex;
 	flex-direction: column;
+	-ms-flex-direction: column;
 	justify-content: center;
+	-ms-justify-content: center;
 	align-items: center;
+	-ms-align-items: center;
 	text-align: center;
 	order: 1;
 	color: $white;
@@ -127,6 +142,7 @@
 	
 	@media screen and (min-width: 992px) {
 		align-items: flex-start;
+		-ms-align-items: flex-start;
 		text-align: left;
 		margin-top: 0;
 		margin-left: 75px;
