--- a/src/scss/pages/treatments.scss
+++ b/src/scss/pages/treatments.scss
@@ -1,11 +1,14 @@
 @import '../vars';
 
 .treatments {
+  flex: 1 0 auto;
 	background: url(../img/background/cover_2.png) 25% 50% no-repeat;
 	position: relative;
 	background-size: cover;
 	display: flex;
+	display: -ms-flex;
 	align-content: center; 
+	-ms-align-content: center; 
   min-height: 800px;
   width: 100%;
 	margin-bottom: 100px;
@@ -29,11 +32,21 @@
 	}
 }
 
+.container--treatments {
+	@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+		width: 1170px; 
+	}
+}
+
 .treatments-info { 
 	display: flex;
+	display: -ms-flex;
 	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
 	align-items: center;
+	-ms-align-items: center;
 	justify-content: center;
+	-ms-justify-content: center;
 	width: 100%;
 	height: 100%; 
 }
@@ -42,12 +55,19 @@
 	position: relative;
 	z-index: 99;
 	display: flex;
+	display: -ms-flex;
 	align-items: center;
+	-ms-align-items: center;
 	flex-direction: column;
+	-ms-flex-direction: column;
 	min-height: 275px;
 	max-width: 270px;
 	margin: 10px;
 	text-align: center;
+	
+	@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+		width: 270px;
+	}
 }
 
 .treatments-block__icon {
@@ -60,9 +80,11 @@
 	margin-bottom: 25px;
 
 	display: flex;
+	display: -ms-flex;
 	justify-content: center;
+	-ms-justify-content: center;
 	align-items: center;
-
+	-ms-align-items: center;
 }
 
 .block-icon {
@@ -71,12 +93,14 @@
 }
 
 .title--treatments {
+	width: 100%;
 	font-size: 1.8rem;
 	color: $white;
 	margin-bottom: 10px;
 }
 
 .treatments-block__desc {
+	width: 100%;
 	font-size: 1.6rem;
 	color: $white;
 }
